# FTS

./: .gitignore  .pre-commit-config.yaml  01_research_strategy.md  02_stage_tasks_roles.md  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: discrepancy.md  task.md
.github/workflows/: ci.yml
assumptions/: register.md
docs/: reproducibility.md
docs/decisions/: RDR-0001-license.md  RDR-0002-total-order-count-presentation.md  RDR-0003-stage2-batched-review-cadence.md  RDR-0004-stage4-fbt-blockers.md
docs/research_notes/: stage1_publication_tables.md  stage2_fbt_numerical_appendix.md
docs/reviews/: PUBTABLES-review-brief.md  REV-TASK-001-001.md  REV-TASK-001-P1-CAPSULE-001.md  REV-TASK-001-PUBTABLES-001-followup.md  REV-TASK-001-PUBTABLES-001.md  REV-TASK-001-SWEEP-001.md  REV-TASK-002-FBT-NUMERICAL-001-followup.md  (+12 more)
sources/: bibliography.bib  claim_matrix.csv  source_map.md
specs/: epistemic_status.md  notation.md
tasks/: TASK-000_bootstrap_repo.md  TASK-001_fff_core_orders_cyclic.md  TASK-001_p1_release_capsule.md  TASK-001_publication_tables_docs.md  TASK-001_stage1_sweeps_tables.md  TASK-002_fbt_numerical_appendix.md  TASK-003_fff_structure_impl.md  TASK-003_fff_structure_spec.md  TASK-003_p3_release_capsule.md  TASK-004_atlas_v1_release_capsule.md  TASK-004_fbt_atlas_grid_v0.md  TASK-004_fbt_atlas_oracle.md  TASK-004_fbt_atlas_v1_aggregate.md  TASK-004_fbt_atlas_v1_engine.md  TASK-004_fbt_atlas_v1_spec.md  TASK-004_fbt_finite_atlas_spec.md  TASK-004_p4_release_capsule.md
(+142 files in other folders)
